fix to work other items
